[package]
name = "jubjub_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
libp2p = { version = "0.53.2", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-hex = "0.1.0"
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
xxhash-rust = "0.8.10"
