[package]
name = "jubjub_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.79"
axum = "0.7.5"
bincode = "1.3.3"
cacache = { version = "*", default-features = false, features = ["tokio-runtime", "mmap"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
cratetorrent = "0.1.0"
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
futures = "0.3.30"
h2 = { version = "0.4.4", features = ["stream"] }
hashbrown = "0.14.3"
libp2p = { version = "0.53.2", features = ["full"] }
opentelemetry = { version = "0.22.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22.1", features = ["metrics", "rt-tokio"] }
prometheus-client = "0.22.2"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
rfd = { version = "0.14.1" }
serde = { version = "1.0.197", features = ["derive"] }
serde-hex = "0.1.0"
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
sled = "0.34.7"
thiserror = "1.0.63"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
toml = "0.8.12"
tracing = { version = "0.1.40", features = ["log"] }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.4"
url = "2.5.0"
xxhash-rust = "0.8.10"
